--- a/Copy_of_fcc_book_recommendation_knn.ipynb
+++ b/Copy_of_fcc_book_recommendation_knn.ipynb
@@ -11,8 +11,54 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Question: Book Recommendation Engine using KNN\n",
+        "\n",
+        "In this challenge, you will create a book recommendation algorithm using K-Nearest Neighbors.\n",
+        "\n",
+        "In this project, you will use the Book-Crossings dataset, which contains 1.1 million ratings (scale of 1-10) of 270,000 books by 90,000 users. The dataset is already imported in the notebook, so no additional download is required.\n",
+        "\n",
+        "Use NearestNeighbors from sklearn.neighbors to develop a model that shows books that are similar to a given book. The Nearest Neighbors algorithm measures the distance to determine the “closeness” of instances.\n",
+        "\n",
+        "Create a function named get_recommends that takes a book title (from the dataset) as an argument and returns a list of 5 similar books with their distances from the book argument.\n",
+        "\n",
+        "This code:\n",
+        "\n",
+        "get_recommends(\"The Queen of the Damned (Vampire Chronicles (Paperback))\")\n",
+        "\n",
+        "should return:\n",
+        "\n",
+        "\n",
+        "[\n",
+        "  \n",
+        "  'The Queen of the Damned (Vampire Chronicles (Paperback))',\n",
+        "\n",
+        "  [\n",
+        "\n",
+        "    ['Catch 22', 0.793983519077301],\n",
+        "    ['The Witching Hour (Lives of the Mayfair Witches)', 0.7448656558990479],\n",
+        "    ['Interview with the Vampire', 0.7345068454742432],\n",
+        "    ['The Tale of the Body Thief (Vampire Chronicles (Paperback))', 0.5376338362693787],\n",
+        "    ['The Vampire Lestat (Vampire Chronicles, Book II)', 0.5178412199020386]\n",
+        "\n",
+        "  ]\n",
+        "\n",
+        "]\n",
+        "\n",
+        "Notice that the data returned from get_recommends() is a list. The first element in the list is the book title passed into the function. The second element in the list is a list of five more lists. Each of the five lists contains a recommended book and the distance from the recommended book to the book passed into the function.\n",
+        "\n",
+        "If you graph the dataset (optional), you will notice that most books are not rated frequently. To ensure statistical significance, remove from the dataset users with less than 200 ratings and books with less than 100 ratings.\n",
+        "\n",
+        "The first three cells import libraries you may need and the data to use. The final cell is for testing. Write all your code in between those cells."
+      ],
+      "metadata": {
+        "id": "lcAR6sApl8Nh"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Y1onB6kUvo4Z"
       },
