--- a/fcc_predict_health_costs_with_regression.ipynb
+++ b/fcc_predict_health_costs_with_regression.ipynb
@@ -489,7 +489,7 @@
       "cell_type": "code",
       "source": [
         "# -------------------------\n",
-        "# 5) BUILD & COMPILE MODEL (IMPROVED)\n",
+        "# 5) BUILD & COMPILE MODEL \n",
         "# -------------------------\n",
         "from tensorflow.keras.losses import Huber\n",
         "\n",
